topnav link overlap fix

--- a/style.css
+++ b/style.css
@@ -53,14 +53,28 @@ p {
     width: 100%;
 }
 
-.wrapper .sidebar{
-    background: #adadad;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 325px;
-    height: 100%;
-    padding: 20px 0;
+@media only screen and (min-width: 589px) {
+    .wrapper .sidebar{
+        background: #adadad;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 325px;
+        height: 100%;
+        padding-top: 25px;
+    }
+}
+
+@media only screen and (max-width: 588px) {
+    .wrapper .sidebar{
+        background: #adadad;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 325px;
+        height: 100%;
+        padding-top: 100px;
+    }
 }
 
 .main {
@@ -87,4 +101,11 @@ p {
 .right {
     padding: 1.0%;
     float: right;
+}
+
+.sr20det {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    padding-top: 2.5%;
 }
